--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ out/
 # Gradle files
 .gradle/
 build/
+gradle/
+.idea/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -38,3 +40,11 @@ captures/
 
 # Keystore files
 *.jks
+
+*.iml
+
+*.gradle
+
+*.bat
+
+
